Problem: name conflicts from windows.h, draft API declared in pch.

--- a/Makefile.am
+++ b/Makefile.am
@@ -234,7 +234,8 @@ src_libzmq_la_SOURCES = \
 	src/decoder_allocators.cpp \
 	src/decoder_allocators.hpp \
 	src/socket_poller.cpp \
-	src/socket_poller.hpp
+	src/socket_poller.hpp \
+	src/zmq_draft.hpp
 
 if USE_TWEETNACL
 src_libzmq_la_SOURCES += \
