--- a/builds/msvc/vs2013/libzmq/libzmq.vcxproj.filters
+++ b/builds/msvc/vs2013/libzmq/libzmq.vcxproj.filters
@@ -567,6 +567,9 @@
     <ClInclude Include="..\..\..\..\src\tweetnacl.h">
       <Filter>src\include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\zmq_draft.h">
+      <Filter>src\include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
