Problem: incorrect file extension (.hpp) for zmq_draft.h in Makefile.am.

--- a/Makefile.am
+++ b/Makefile.am
@@ -235,7 +235,7 @@ src_libzmq_la_SOURCES = \
 	src/decoder_allocators.hpp \
 	src/socket_poller.cpp \
 	src/socket_poller.hpp \
-	src/zmq_draft.hpp
+	src/zmq_draft.h
 
 if USE_TWEETNACL
 src_libzmq_la_SOURCES += \
