Problem: precompiled.cpp/hpp required but excluded from non-msvc builds.

--- a/Makefile.am
+++ b/Makefile.am
@@ -131,6 +131,8 @@ src_libzmq_la_SOURCES = \
 	src/poller.hpp \
 	src/poller_base.cpp \
 	src/poller_base.hpp \
+	src/precompiled.cpp \
+	src/precompiled.hpp \
 	src/proxy.cpp \
 	src/proxy.hpp \
 	src/pub.cpp \
