Problem: there is no fine grained way to setup unix sockets in libzmq
Solution: use systemd socket activation to solve the problem at least on
Linux with systemd.

The support is limited to ipc transport atm.

--- a/Makefile.am
+++ b/Makefile.am
@@ -298,6 +298,11 @@ src_libzmq_la_CPPFLAGS += ${pgm_CFLAGS}
 src_libzmq_la_LIBADD += ${pgm_LIBS}
 endif
 
+if HAVE_SYSTEMD
+src_libzmq_la_CPPFLAGS += ${libsystemd_CFLAGS}
+src_libzmq_la_LIBADD += ${libsystemd_LIBS}
+endif
+
 if ENABLE_PERF
 noinst_PROGRAMS = \
 	perf/local_lat \
