Problem: libzmq README has no API description
Solution: Use gitdown, mkman from zproject and CLASS documentation to
build a README with API

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -58,6 +58,10 @@ SUFFIXES=.html .txt .xml .3 .7
 	xmlto man $<
 .xml.7:
 	xmlto man $<
+
+.PHONY: zmq.txt
+zmq.txt:
+	./mkman $@
 endif
 
 dist-hook : $(MAN_DOC) $(MAN_HTML)
