Problem: make dist does not tar up macros.hpp
Solution: add it to Makefile.am file list

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,6 +40,7 @@ libzmq_la_SOURCES = \
     kqueue.hpp \
     lb.hpp \
     likely.hpp \
+    macros.hpp \
     mailbox.hpp \
     mechanism.hpp  \
     msg.hpp \
