Problem: spec file needs version before build on OBS
Solution: stop autogenerating it and hard code version so that the
OBS build service can extract it and use it to build packages
automatically

--- a/configure.ac
+++ b/configure.ac
@@ -662,7 +662,6 @@ AC_CONFIG_FILES([ \
     src/libzmq.pc \
     doc/Makefile \
     builds/Makefile \
-    builds/msvc/Makefile \
-    packaging/redhat/zeromq.spec])
+    builds/msvc/Makefile])
 
 AC_OUTPUT
