--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -10,6 +10,27 @@ ifeq ($(DEB_BUILD_ARCH_OS), kfreebsd)
 	DO_TEST = no
 endif
 
+DRAFTS=no
+
+# OBS build: add
+#   Macros:
+#   %_with_drafts 1
+# at the BOTTOM of the OBS prjconf
+OBS_BUILD_CFG=/.build/build.dist
+ifeq ("$(wildcard $(OBS_BUILD_CFG))","")
+BUILDCONFIG=$(shell ls -1 /usr/src/packages/SOURCES/_buildconfig* | head -n 1)
+endif
+ifneq ("$(wildcard $(OBS_BUILD_CFG))","")
+ifneq ("$(shell grep drafts $(OBS_BUILD_CFG))","")
+DRAFTS=yes
+endif
+endif
+
+# User build: DEB_BUILD_OPTIONS=drafts dpkg-buildpackage
+ifneq (,$(findstring drafts,$(DEB_BUILD_OPTIONS)))
+DRAFTS=yes
+endif
+
 override_dh_clean:
 	dh_clean
 	find $(CURDIR) -type s -exec rm {} \;
@@ -17,7 +38,7 @@ override_dh_clean:
 	rm -f config.log
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-pgm --with-libsodium
+	dh_auto_configure -- --with-pgm --with-libsodium --enable-drafts=$(DRAFTS)
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
