--- a/src/libzmq.pc.cmake.in
+++ b/src/libzmq.pc.cmake.in
@@ -7,5 +7,6 @@ Name: libzmq
 Description: 0MQ c++ library
 Version: @ZMQ_VERSION_MAJOR@.@ZMQ_VERSION_MINOR@.@ZMQ_VERSION_PATCH@
 Libs: -L${libdir} -lzmq
-Libs.private: -lstdc++
+Libs.private: -lstdc++ @pkg_config_libs_private@
+Requires.private: @pkg_config_requires_private@
 Cflags: -I${includedir} @pkg_config_defines@
