--- a/configure.ac
+++ b/configure.ac
@@ -37,9 +37,10 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 3.1: 3:0:0 (ABI version 3)
 # ZeroMQ version 4.0: 4:0:0 (ABI version 4)
 # ZeroMQ version 4.1: 5:0:0 (ABI version 5)
+# ZeroMQ version 4.2.0: 6:0:1 (ABI version 5)
 #
 # libzmq -version-info current:revision:age
-LTVER="5:0:0"
+LTVER="6:0:1"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
