add link libsodium.a

--- a/builds/mingw32/Makefile.mingw32
+++ b/builds/mingw32/Makefile.mingw32
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Os -g -DDLL_EXPORT -DFD_SETSIZE=16384 -DZMQ_USE_SELECT -I.
-LIBS=-lws2_32 -lIphlpapi
+LIBS=-lws2_32 -lIphlpapi -lsodium
 
 OBJS = ctx.o reaper.o dist.o err.o \
 	clock.o metadata.o random.o \
