Problem: epoll leaks socket on fork+exec
Solution: if available, use epoll_create1 with EPOLL_CLOEXEC flag to
make the process close the socket on fork+exec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,10 @@ if (POLLER STREQUAL "")
     set (CMAKE_REQUIRED_INCLUDES)
     if (HAVE_EPOLL)
         set (POLLER "epoll")
+        check_function_exists (epoll_create1 HAVE_EPOLL_CLOEXEC)
+        if (HAVE_EPOLL_CLOEXEC)
+            set (ZMQ_USE_EPOLL_CLOEXEC 1)
+        endif ()
     endif ()
 endif ()
 
