Problem: Travis installs packages when not needed
Solution: narrow down the matrix to install valgrind and lcov only
for the test runs that use them.
CMake is part of the default image so no need to install it at all.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,29 +14,27 @@ env:
 - BUILD_TYPE=cmake CURVE=tweetnacl
 - BUILD_TYPE=default CURVE=libsodium
 - BUILD_TYPE=default
-- BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
-- BUILD_TYPE=valgrind CURVE=tweetnacl DRAFT=enabled
 
 matrix:
-  exclude:
-  - env: BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
-    os: osx
-  - env: BUILD_TYPE=valgrind CURVE=tweetnacl DRAFT=enabled
-    os: osx
   include:
   - env: BUILD_TYPE=default CURVE=tweetnacl IPv6=ON
     os: linux
     dist: precise
     sudo: false
+  - env: BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
+    os: linux
+    addons:
+      apt:
+        packages:
+        - lcov
+  - env: BUILD_TYPE=valgrind CURVE=tweetnacl DRAFT=enabled
+    os: linux
+    addons:
+      apt:
+        packages:
+        - valgrind
 
 sudo: required
-
-addons:
-  apt:
-    packages:
-    - cmake
-    - lcov
-    - valgrind
 
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils ; fi
