--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ env:
 - BUILD_TYPE=default CURVE=tweetnacl DRAFT=enabled
 - BUILD_TYPE=android CURVE=tweetnacl
 - BUILD_TYPE=cmake CURVE=tweetnacl
-- BUILD_TYPE=default CURVE=libsodium
 - BUILD_TYPE=default
 
 matrix:
@@ -33,11 +32,23 @@ matrix:
       apt:
         packages:
         - valgrind
+  - env: BUILD_TYPE=default CURVE=libsodium
+    os: linux
+    addons:
+      apt:
+        sources:
+        - sourceline: 'deb http://download.opensuse.org/repositories/home:/zeromq:/git-stable/xUbuntu_14.04/ ./'
+          key_url: 'http://download.opensuse.org/repositories/home:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
+        packages:
+        - libsodium-dev
+  - env: BUILD_TYPE=default CURVE=libsodium
+    os: osx
 
 sudo: required
 
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils ; fi
+- if [ $TRAVIS_OS_NAME == "osx" -a $CURVE == "libsodium" ] ; then brew install libsodium ; fi
 
 before_script:
 # ZMQ stress tests need more open socket (files) than the usual default
