--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ matrix:
           key_url: 'http://download.opensuse.org/repositories/home:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
         packages:
         - libsodium-dev
+        - asciidoc
+        - xmlto
   - env: BUILD_TYPE=default CURVE=libsodium
     os: osx
 
