--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -7,7 +7,8 @@ Build-Depends: debhelper (>= 9),
  libpgm-dev,
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
- pkg-config
+ pkg-config,
+ asciidoc-base | asciidoc, xmlto,
 Standards-Version: 3.9.8
 Homepage: http://www.zeromq.org/
 
