Include FindSodium.cmake in dist tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -791,6 +791,7 @@ XFAIL_TESTS += test_ipc_wildcard \
 endif
 
 EXTRA_DIST = \
+	FindSodium.cmake \
 	CMakeLists.txt \
 	autogen.sh	\
 	version.sh	\
