--- a/configure.ac
+++ b/configure.ac
@@ -40,9 +40,10 @@ AC_SUBST(PACKAGE_VERSION)
 # ZeroMQ version 4.2.0: 6:0:1 (ABI version 5)
 # ZeroMQ version 4.2.1: 6:1:1 (ABI version 5)
 # ZeroMQ version 4.2.2: 6:2:1 (ABI version 5)
+# ZeroMQ version 4.2.3: 6:3:1 (ABI version 5)
 #
 # libzmq -version-info current:revision:age
-LTVER="6:2:1"
+LTVER="6:3:1"
 AC_SUBST(LTVER)
 
 # Take a copy of original flags
