Problem: ZMQ background threads are unnamed
Solution: use pthread API to set the name. For now call every thread
"ZMQ b/g thread". Would be nice to number the I/O threads and name
explicitly the reaper thread, but in reality a bit of internal API
churn would be necessary, so perhaps it's not worth it.
This is useful when debugging a process with many threads.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -323,6 +323,7 @@ zmq_check_tcp_keepidle ()
 zmq_check_tcp_keepintvl ()
 zmq_check_tcp_keepalive ()
 zmq_check_tcp_tipc ()
+zmq_check_pthread_setname ()
 
 
 if (    CMAKE_SYSTEM_NAME MATCHES "Linux"
