--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -29,6 +29,10 @@
 #cmakedefine ZMQ_HAVE_TCP_KEEPIDLE
 #cmakedefine ZMQ_HAVE_TCP_KEEPINTVL
 #cmakedefine ZMQ_HAVE_TCP_KEEPALIVE
+#cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_1
+#cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_2
+#cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_3
+#cmakedefine ZMQ_HAVE_PTHREAD_SET_NAME
 
 #cmakedefine ZMQ_HAVE_OPENPGM
 #cmakedefine ZMQ_MAKE_VALGRIND_HAPPY
