Problem: under non-Windows systems, test fails because random_open was not called
Solution: call random_open/random_close within test

--- a/Makefile.am
+++ b/Makefile.am
@@ -626,6 +626,10 @@ tests_test_security_curve_SOURCES = \
 	tests/testutil.hpp \
 	src/tweetnacl.c \
 	src/curve_client_tools.hpp \
+	src/clock.hpp \
+	src/clock.cpp \
+	src/random.hpp \
+	src/random.cpp \
 	src/err.hpp \
 	src/err.cpp
 
